tests/snapshots/integration_response_validation__delete_with_204.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="0">
        <testcase name="DELETE /pets/1 delete_with_204" time="0.00">
            <system-out>
[[PROPERTY|correlationId=delete_with_204]]
[[PROPERTY|method=DELETE]]
[[PROPERTY|operationId=deletePet]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=]]
[[PROPERTY|statusCode=204]]
            </system-out>
        </testcase>
    </testsuite>
</testsuites>
